cmake_minimum_required(VERSION 3.30)
project(linux_programming_interface)

add_executable(
    linux_programming_interface
        main.cpp
        chap4/4.1.cpp
        chap4/4.2.cpp
        chap5/5.2.cpp
        chap5/5.3.cpp
        chap5/5.4.cpp
        chap5/5.7.cpp
        chap6/6.2.cpp
        chap6/6.3.cpp
        chap8/8.2.cpp
)
